
MAINTAINERCLEANFILES = Makefile.in

docdir   =	$(datadir)/ofeli/doc/demos

dist_doc_DATA =	beam.html \
						contact.html \
						eigen_demo1.html \
						eigen_demo2.html \
						lelas2d.html \
						lelas3d.html \
						ls_demo1.html \
						ls_demo2.html \
						ode_demo1.html \
						ode_demo2.html \
						ode_demo3.html \
						ode_demo4.html \
						std3.html \
						stdc2.html \
						tiff2.html \
						tins2.html \
						truss.html \
						ts_demo1.html \
						ts_demo2.html \
						ttd2.html

doc_DATA =	beam.html \
				contact.html \
				eigen_demo1.html \
				eigen_demo2.html \
				lelas2d.html \
				lelas3d.html \
				ls_demo1.html \
				ls_demo2.html \
				ode_demo1.html \
				ode_demo2.html \
				ode_demo3.html \
				ode_demo4.html \
				std3.html \
				stdc2.html \
				tiff2.html \
				tins2.html \
				truss.html \
				ts_demo1.html \
				ts_demo2.html \
				ttd2.html
