
MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = 

htmldir = $(datadir)/ofeli/doc/html

html_DATA =	$(wildcard *.html) \
		$(wildcard *.png) \
		$(wildcard *.gif) \
		$(wildcard *.js) \
		$(wildcard *.css)

dist_html_DATA =	$(wildcard *.html) \
			$(wildcard *.png) \
			$(wildcard *.gif) \
			$(wildcard *.js) \
			$(wildcard *.css)
