
MAINTAINERCLEANFILES = Makefile.in

docdir   =	$(datadir)/ofeli/doc/im

dist_doc_DATA =	backward.gif \
		bottom.gif \
		download.gif \
		encours.gif \
		forward.gif \
		line.gif \
		o_arr.gif \
		ofeli.gif \
		pdf.gif \
		plus.gif \
		sf.gif \
		tab_b.gif \
		tab_l.gif \
		tab_r.gif \
		top.gif \
		tab_s.png \
		tab_b.png \
		pattern3.png \
		sflogo.png

doc_DATA =	backward.gif \
		bottom.gif \
		download.gif \
		encours.gif \
		forward.gif \
		line.gif \
		o_arr.gif \
		ofeli.gif \
		pdf.gif \
		plus.gif \
		sf.gif \
		tab_b.gif \
		tab_l.gif \
		tab_r.gif \
		top.gif \
		tab_s.png \
		tab_b.png \
		pattern3.png \
		sflogo.png
