
MAINTAINERCLEANFILES = Makefile.in

docdir   =	$(datadir)/ofeli/doc/tutorial

dist_doc_DATA =	lesson1.html \
		lesson2.html \
		lesson3.html \
		lesson4.html \
		lesson5.html \
		lesson6.html \
		lesson7.html

doc_DATA =	lesson1.html \
		lesson2.html \
		lesson3.html \
		lesson4.html \
		lesson5.html \
		lesson6.html \
		lesson7.html
