## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = no-dependencies

SUBDIRS = cl electromagnetics fluid interface laplace solid therm porous

ssdir = $(pkgincludedir)/equations

ss_HEADERS = DG.h \
             Equa.h \
             Equa_impl.h \
             Equation.h \
             Equation_impl.h \
             EquaUtil.h
