## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = no-dependencies

SUBDIRS = fparser tclap xmlsp

ssdir =	$(pkgincludedir)/io

ss_HEADERS =	FFI.h \
		Funct.h \
		IOField.h \
		IPF.h \
		Prescription.h \
		Tabulation.h \
		UserData.h \
		XMLParser.h \
		output.h \
		saveField.h
