## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = no-dependencies

SUBDIRS = tclap xmlsp

ssdir =	$(pkgincludedir)/io

ss_HEADERS = Fct.h \
             FFI.h \
             Funct.h \
             IOField.h \
             IPF.h \
             Prescription.h \
             Tabulation.h \
             XMLParser.h \
             output.h \
             saveField.h \
             exprtk.hpp
