## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = no-dependencies

SUBDIRS = petsc

ssdir =	$(pkgincludedir)/linear_algebra

ss_HEADERS =	Assembly.h \
		BMatrix.h \
		DMatrix.h \
		DSMatrix.h \
		FFT.h \
		GraphOfMatrix.h \
		LocalMatrix.h \
		LocalVect.h \
		Matrix.h \
		Point.h \
		Point2D.h \
		SkMatrix.h \
		SkSMatrix.h \
		SpMatrix.h \
		TrMatrix.h \
		Vect.h
