## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = no-dependencies

SUBDIRS = petsc

ssdir =	$(pkgincludedir)/linear_algebra

ss_HEADERS = \
		Assembly.h \
		Assembly_impl.h \
		BMatrix.h \
		BMatrix_impl.h \
		DMatrix.h \
		DMatrix_impl.h \
		DSMatrix.h \
		DSMatrix_impl.h \
		GraphOfMatrix.h \
		LocalMatrix.h \
		LocalMatrix_impl.h \
		LocalVect.h \
		LocalVect_impl.h \
		Matrix.h \
		Matrix_impl.h \
		Point.h \
		Point2D.h \
		SkMatrix.h \
		SkMatrix_impl.h \
		SkSMatrix.h \
		SkSMatrix_impl.h \
		SpMatrix.h \
		SpMatrix_impl.h \
		TrMatrix.h \
		TrMatrix_impl.h \
		Vect.h \
		Vect_impl.h
