## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = no-dependencies

SUBDIRS = bamg metis

ssdir =	$(pkgincludedir)/mesh

ss_HEADERS =	Domain.h \
		Edge.h \
		Element.h \
		Figure.h \
		getMesh.h \
		Grid.h \
		Material.h \
		Mesh.h \
		MeshAdapt.h \
		MeshExtract.h \
		MeshUtil.h \
		Node.h \
		Partition.h \
		saveMesh.h \
		Side.h
