## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = no-dependencies

ssdir =	$(pkgincludedir)/solvers

ss_HEADERS =	BSpline.h \
		BiCG.h \
		BiCGStab.h \
		CG.h \
		CGS.h \
		EigenProblemSolver.h \
		GMRes.h \
		GS.h \
		Iter.h \
		Jacobi.h \
		LinearSolver.h \
		ODESolver.h \
		OptimAux.h \
		OptimSA.h \
		OptimTN.h \
		Prec.h \
		Richardson.h \
		Schur.h \
		SSOR.h \
		TimeStepping.h

