## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = no-dependencies

ssdir =	$(pkgincludedir)/solvers

ss_HEADERS = \
		BSpline.h \
		BiCG.h \
		BiCGStab.h \
		CG.h \
		CGS.h \
		EigenProblemSolver.h \
		GMRes.h \
		GS.h \
		Iter.h \
		Jacobi.h \
		LinearSolver.h \
		MyOpt.h \
		MyNLAS.h \
		NLASSolver.h \
		ODESolver.h \
		Optim.h \
		OptSolver.h \
		Prec.h \
		Prec_impl.h \
		Richardson.h \
		Schur.h \
		SSOR.h \
		TimeStepping.h

