## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = no-dependencies

ssdir =	$(pkgincludedir)/util

ss_HEADERS = banner.h \
             constants.h \
             Gauss.h \
             Heap.h \
             macros.h \
             qksort.h \
             Timer.h \
             util.h
